# markup: rd

= Revision history for bismas

== 0.3.0 [unreleased]

* Renamed Bismas::Categories to Bismas::Schema and extended scope.
* Fixed Bismas.amend_encoding to use default encoding when encoding option is
  +nil+.

== 0.2.0 [2015-12-03]

* Added <tt>.CAT</tt> parser.
* Fixed Bismas.amend_encoding to accept encoding object.

== 0.1.0 [2015-11-20]

* First release.

== 0.0.0 [2015-09-17]

* Birthday :-)